[package]
name = "bitnet-gpu-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GPU hardware abstraction layer for BitNet inference"
rust-version.workspace = true

[dependencies]
log.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json.workspace = true

tempfile.workspace = true

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []

[lints]
workspace = true


