[package]
name = "bitnet-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Inference engines for BitNet models"

[dependencies]
bitnet-common = { path = "../bitnet-common" }
bitnet-models = { path = "../bitnet-models" }
bitnet-tokenizers = { path = "../bitnet-tokenizers" }
bitnet-kernels = { path = "../bitnet-kernels" }
bitnet-quantization = { path = "../bitnet-quantization" }
anyhow.workspace = true
futures.workspace = true
futures-util = "0.3.31"
rayon.workspace = true
rand = "0.9.2"
rand_chacha = "0.9.0"
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
num_cpus = "1.17.0"
tokio = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
async-stream = "0.3"
wasm-bindgen-futures = { version = "0.4.53", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
rustc_version_runtime = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4.4"
proptest = "1.7.0"
tempfile = "3.22.0"
chrono = "0.4"
serial_test = "3.2.0"

[features]
default = []
cpu = ["bitnet-kernels/cpu-optimized"]
gpu = ["bitnet-kernels/gpu"]
streaming = []
# Runtime selection
rt-tokio = ["tokio/rt-multi-thread", "tokio/fs", "tokio/io-util", "tokio/macros"]
rt-wasm = ["dep:wasm-bindgen-futures", "dep:gloo-timers"]
# Only run GPU-dependent tests when requested:
gpu-tests = []
# Run tests that require complete kernels/weights:
full-engine = []
integration-tests = []
inference = []
crossval = []

[[test]]
name = "comprehensive_tests"
path = "tests/comprehensive_tests.rs"
required-features = ["full-engine"]