[package]
name = "bitnet-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Inference engines for BitNet models"
include = [
  "src/**",
  "Cargo.toml",
]

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.1-dev" }
bitnet-models = { path = "../bitnet-models", version = "0.2.1-dev" }
bitnet-tokenizers = { path = "../bitnet-tokenizers", version = "0.2.1-dev" }
bitnet-kernels = { path = "../bitnet-kernels", version = "0.2.1-dev" }
bitnet-quantization = { path = "../bitnet-quantization", version = "0.2.1-dev" }
bitnet-prompt-templates = { path = "../bitnet-prompt-templates", version = "0.2.1-dev" }
bitnet-receipts = { path = "../bitnet-receipts", version = "0.2.1-dev" }
bitnet-rope = { path = "../bitnet-rope", version = "0.2.1-dev" }
bitnet-logits = { path = "../bitnet-logits", version = "0.2.1-dev" }
bitnet-sampling = { path = "../bitnet-sampling", version = "0.2.1-dev" }
bitnet-generation = { path = "../bitnet-generation", version = "0.2.1-dev" }
bitnet-engine-core = { path = "../bitnet-engine-core", version = "0.2.1-dev" }
bitnet-sys = { path = "../bitnet-sys", version = "0.2.1-dev", optional = true }
anyhow.workspace = true
futures.workspace = true
futures-util = "0.3.31"
rayon.workspace = true
rand = "0.9.2"
rand_chacha = "0.9.0"
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
num_cpus = "1.17.0"
tokio = { workspace = true }
thiserror = { workspace = true }
log = "0.4.28"
async-stream = "0.3.6"
wasm-bindgen-futures = { version = "0.4.55", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
rustc_version_runtime = "0.3.0"
chrono = "0.4.42"

[dev-dependencies]
tokio-test = "0.4.4"
proptest = "1.9.0"
tempfile = "3.23.0"
chrono = "0.4.42"
serial_test = "3.2.0"
bitnet-test-support.workspace = true
insta.workspace = true
bitnet-device-probe = { path = "../bitnet-device-probe", version = "0.2.1-dev" }

[features]
default = []
cpu = ["bitnet-kernels/cpu-optimized"]
cuda = ["bitnet-kernels/cuda"]
metal = ["bitnet-common/metal", "bitnet-models/metal"]
gpu = ["cuda"]  # GPU umbrella — CUDA is the current implementation
oneapi = ["bitnet-common/oneapi", "bitnet-kernels/oneapi", "bitnet-quantization/oneapi"]
ffi = ["dep:bitnet-sys", "bitnet-sys/ffi"]
streaming = []
# Runtime selection
rt-tokio = ["tokio/rt-multi-thread", "tokio/fs", "tokio/io-util", "tokio/macros"]
rt-wasm = ["dep:wasm-bindgen-futures", "dep:gloo-timers"]
# Only run GPU-dependent tests when requested:
gpu-tests = []
# Run tests that require complete kernels/weights:
full-engine = []
integration-tests = []
inference = []
crossval = []
trace = ["bitnet-models/trace"]  # Enable tensor activation tracing

[[test]]
name = "comprehensive_tests"
path = "tests/comprehensive_tests.rs"
required-features = ["full-engine"]

[[test]]
name = "cpu_golden_path"
path = "tests/cpu_golden_path.rs"
required-features = ["cpu"]

[[test]]
name = "e2e_cpu_golden_path"
path = "tests/e2e_cpu_golden_path.rs"
required-features = ["cpu"]

[[test]]
name = "srp_integration_test"
path = "tests/srp_integration_test.rs"
