[package]
name = "bitnet-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance compute kernels for BitNet"

[dependencies]
bitnet-common = { path = "../bitnet-common" }
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
rayon.workspace = true
log.workspace = true
cudarc = { version = "0.17", optional = true, features = ["cuda-12000"] }
cc = { version = "1.0", optional = true }
bindgen = { version = "0.72", optional = true }
half = { version = "2.3", optional = true }
sysinfo = { version = "0.30" }

[build-dependencies]
bindgen = { version = "0.72", optional = true }
cc = { version = "1.0", optional = true }

[dev-dependencies]
criterion.workspace = true
env_logger = "0.11"
tempfile = "3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86-specific dependencies

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM-specific dependencies

[features]
integration-tests = []
default = []
cpu = ["cpu-fallback"]
cpu-fallback = []
cpu-optimized = ["avx2", "neon"]
avx2 = []
avx512 = []
neon = []
gpu = ["dep:cudarc", "dep:half"]
cuda = ["gpu"]  # Alias for backward compatibility
ffi = ["dep:cc", "dep:bindgen"]

[[bench]]
name = "kernel_benchmarks"
harness = false

[[test]]
name = "kernel_tests"
path = "tests/kernel_tests.rs"

[[test]]
name = "comprehensive_tests"
path = "tests/comprehensive_tests.rs"

[[test]]
name = "comprehensive_unit_tests"
path = "tests/comprehensive_unit_tests.rs"

[[test]]
name = "comprehensive_kernel_unit_tests"
path = "tests/comprehensive_kernel_unit_tests.rs"

[[test]]
name = "gpu_integration"
path = "tests/gpu_integration.rs"
required-features = ["gpu"]

[[example]]
name = "gpu_validation"
path = "examples/gpu_validation.rs"
required-features = ["gpu"]

[[example]]
name = "simple_gpu_test"
path = "examples/simple_gpu_test.rs"
required-features = ["gpu"]

[[example]]
name = "cuda_smoke"
path = "examples/cuda_smoke.rs"
required-features = ["gpu"]

[[test]]
name = "gpu_quantization"
path = "tests/gpu_quantization.rs"
required-features = ["gpu"]
