[package]
name = "bitnet-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance compute kernels for BitNet"
include = [
  "src/**",
  "Cargo.toml",
  "build.rs",
  "README.md",
  "csrc/**",
]

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.1-dev" }
bitnet-device-probe = { path = "../bitnet-device-probe", version = "0.2.1-dev" }
thiserror.workspace = true
bytemuck.workspace = true
rayon.workspace = true
log.workspace = true
cudarc = { version = "0.17.8", optional = true, features = ["cuda-12000"] }
opencl3 = { version = "0.9", optional = true }
cc = { version = "1.2.46", optional = true }
bindgen = { version = "0.72.1", optional = true }
half = { version = "2.7.1", optional = true }
sysinfo = "0.37.2"
memory-stats = "1.2.0"

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
cc = { version = "1.2.46", optional = true }

[dev-dependencies]
criterion.workspace = true
env_logger = "0.11.8"
serde_json.workspace = true
tempfile = "3.23.0"
temp-env = "0.3.6"
serial_test.workspace = true
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
half = "2.7.1"
bitnet-quantization = { path = "../bitnet-quantization", version = "0.2.1-dev" }
proptest.workspace = true
bitnet-ggml-ffi = { path = "../bitnet-ggml-ffi", version = "0.2.1-dev" }
rand = "0.9.2"
insta.workspace = true
rand_chacha = "0.9.0"
bitnet-tests = { path = "../../tests" }
bitnet-test-support.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86-specific dependencies

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM-specific dependencies

[features]
integration-tests = []
default = []
npu-backend = []
cpu = ["cpu-fallback"]
cpu-fallback = []
cpu-optimized = ["avx512", "avx2", "neon"]
avx2 = []
avx512 = []
neon = []
cuda = ["dep:cudarc", "dep:half", "bitnet-device-probe/cuda"]
gpu = ["cuda", "vulkan", "bitnet-device-probe/gpu"]  # GPU umbrella
vulkan = ["bitnet-device-probe/vulkan"]
oneapi = ["dep:opencl3", "bitnet-common/oneapi", "bitnet-device-probe/oneapi"]
ffi = ["dep:cc", "dep:bindgen"]
inference = []
strict = []  # Strict mode for mock elimination validation

[[bench]]
name = "kernel_benchmarks"
harness = false

[[test]]
name = "kernel_tests"
path = "tests/kernel_tests.rs"

[[test]]
name = "comprehensive_tests"
path = "tests/comprehensive_tests.rs"

[[test]]
name = "comprehensive_unit_tests"
path = "tests/comprehensive_unit_tests.rs"

[[test]]
name = "comprehensive_kernel_unit_tests"
path = "tests/comprehensive_kernel_unit_tests.rs"

[[test]]
name = "rope_reference_tests"
path = "tests/rope_reference_tests.rs"

[[test]]
name = "kernel_bdd_tests"
path = "tests/kernel_bdd_tests.rs"

[[test]]
name = "gpu_integration"
path = "tests/gpu_integration.rs"
required-features = ["gpu"]

[[example]]
name = "gpu_validation"
path = "examples/gpu_validation.rs"
required-features = ["gpu"]

[[example]]
name = "simple_gpu_test"
path = "examples/simple_gpu_test.rs"
required-features = ["gpu"]

[[example]]
name = "cuda_smoke"
path = "examples/cuda_smoke.rs"
required-features = ["gpu"]

[[test]]
name = "gpu_quantization"
path = "tests/gpu_quantization.rs"
required-features = ["gpu"]

[[test]]
name = "opencl_stub_tests"
path = "tests/opencl_stub_tests.rs"
required-features = ["oneapi"]

[[test]]
name = "opencl_kernel_correctness"
path = "tests/opencl_kernel_correctness.rs"

[[test]]
name = "opencl_property_tests"
path = "tests/opencl_property_tests.rs"

[[test]]
name = "opencl_bdd_tests"
path = "tests/opencl_bdd_tests.rs"
