[package]
name = "bitnet-logits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure logits transform functions for BitNet LLM inference"
rust-version.workspace = true

[dependencies]
# Pure-Rust math – no external deps required.

[dev-dependencies]
proptest.workspace = true
insta = { workspace = true }

[features]
default = []
cpu = []
gpu = ["cuda"]
cuda = []

[lints]
workspace = true
