[package]
name = "bitnet-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Model definitions and loading for BitNet inference"

[dependencies]
bitnet-common = { path = "../bitnet-common" }
bitnet-quantization = { path = "../bitnet-quantization" }
bitnet-ggml-ffi = { path = "../bitnet-ggml-ffi", optional = true }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
memmap2.workspace = true
tracing.workspace = true
bytemuck.workspace = true
half = "2.6.0"
sha2 = "0.10.9"
reqwest = { workspace = true, features = ["stream"] }
futures.workspace = true
rand = "0.9.2"
rand_chacha = "0.9.0"
url = "2.5.7"
regex = "1.11.2"
once_cell = "1.21.3"

[dev-dependencies]
tempfile.workspace = true
proptest = "1.7.0"

[features]
default = []
gpu = ["bitnet-common/gpu", "candle-core/cuda"]
validation = []
iq2s-ffi = ["dep:bitnet-ggml-ffi", "bitnet-ggml-ffi/iq2s-ffi"]
iq2s-rust = []  # Placeholder for pure-Rust IQ2_S (safe no-op)
integration-tests = []
