[package]
name = "bitnet-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Model definitions and loading for BitNet inference"

[dependencies]
bitnet-common = { path = "../bitnet-common" }
bitnet-quantization = { path = "../bitnet-quantization" }
bitnet-ggml-ffi = { path = "../bitnet-ggml-ffi", optional = true }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
memmap2.workspace = true
tracing.workspace = true
bytemuck.workspace = true
half = "2.6.0"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { workspace = true, features = ["stream"] }
futures.workspace = true
rand = "0.9.2"
rand_chacha = "0.9.0"
url = "2.5.7"
regex = "1.11.2"
once_cell = "1.21.3"

[dev-dependencies]
tempfile.workspace = true
proptest = "1.7.0"
tokio = { workspace = true, features = ["rt", "macros"] }
dirs = "5"
serial_test.workspace = true

[features]
default = []
cpu = []  # CPU feature for test scaffolding
gpu = ["bitnet-common/gpu", "candle-core/cuda"]
cuda = ["gpu"]  # Backward compatibility alias for gpu
validation = []
iq2s-ffi = ["dep:bitnet-ggml-ffi", "bitnet-ggml-ffi/iq2s-ffi"]
iq2s-rust = []  # Placeholder for pure-Rust IQ2_S (safe no-op)
integration-tests = []
inference = []
quantization = []  # Quantization feature for test scaffolding
ffi = []  # FFI feature for test scaffolding
browser = []  # Browser WASM feature for test scaffolding
nodejs = []  # Node.js WASM feature for test scaffolding
crossval = []  # Cross-validation feature for test scaffolding
mixed-precision = []  # Mixed precision feature for test scaffolding
kernels = []  # Kernels integration for test scaffolding
i2s = []  # I2S quantization for test scaffolding
tl1 = []  # TL1 quantization for test scaffolding
tl2 = []  # TL2 quantization for test scaffolding
test-fixtures = []  # Enable tests that require real GGUF fixtures
fixtures = []  # Enable GGUF fixture generation for QK256 dual-flavor tests (PR1)
