[package]
name = "bitnet-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Model definitions and loading for BitNet inference"
include = [
  "src/**",
  "Cargo.toml",
]

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.1.0" }
bitnet-quantization = { path = "../bitnet-quantization", version = "0.1.0" }
bitnet-transformer = { path = "../bitnet-transformer", version = "0.1.0" }
bitnet-ggml-ffi = { path = "../bitnet-ggml-ffi", version = "0.1.0", optional = true }
bitnet-trace = { path = "../bitnet-trace", version = "0.1.0", optional = true }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = { workspace = true }
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
memmap2.workspace = true
tracing.workspace = true
bytemuck.workspace = true
half = "2.7.1"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { workspace = true, features = ["stream"] }
futures.workspace = true
rand = "0.9.2"
rand_chacha = "0.9.0"
url = "2.5.7"
regex = "1.12.2"

[dev-dependencies]
tempfile.workspace = true
proptest = "1.9.0"
tokio = { workspace = true, features = ["rt", "macros"] }
dirs = "6.0.0"
serial_test.workspace = true
sha2 = "0.10.9"
sysinfo = "0.37.2"
bitnet-st2gguf = { path = "../bitnet-st2gguf", version = "0.1.0" }
bitnet-test-support.workspace = true

[features]
default = []
cpu = ["bitnet-transformer/cpu"]  # CPU feature for test scaffolding
gpu = ["bitnet-common/gpu", "candle-core/cuda", "bitnet-transformer/gpu"]
cuda = ["gpu"]  # Backward compatibility alias for gpu
validation = []
iq2s-ffi = ["dep:bitnet-ggml-ffi", "bitnet-ggml-ffi/iq2s-ffi"]
iq2s-rust = []  # Placeholder for pure-Rust IQ2_S (safe no-op)
integration-tests = []
inference = []
quantization = []  # Quantization feature for test scaffolding
ffi = []  # FFI feature for test scaffolding
browser = []  # Browser WASM feature for test scaffolding
nodejs = []  # Node.js WASM feature for test scaffolding
crossval = []  # Cross-validation feature for test scaffolding
mixed-precision = []  # Mixed precision feature for test scaffolding
kernels = []  # Kernels integration for test scaffolding
i2s = []  # I2S quantization for test scaffolding
tl1 = []  # TL1 quantization for test scaffolding
tl2 = []  # TL2 quantization for test scaffolding
test-fixtures = []  # Enable tests that require real GGUF fixtures
fixtures = []  # Enable GGUF fixture generation for QK256 dual-flavor tests (PR1)
trace = ["dep:bitnet-trace"]  # Enable tensor activation tracing for cross-validation
