[package]
name = "bitnet-opencl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OpenCL runtime binding layer for BitNet GPU inference"
rust-version.workspace = true

[dependencies]
log.workspace = true
opencl3 = { version = "0.9", optional = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
opencl-runtime = ["dep:opencl3"]
bench = []
cpu = []

[[test]]
name = "nix_integration_tests"
path = "tests/nix_integration_tests.rs"

[lints]
workspace = true
