[package]
name = "bitnet-opencl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OpenCL backend for BitNet GPU inference on Intel Arc GPUs"
rust-version.workspace = true

[dependencies]
bitnet-common = { path = "../bitnet-common", version = "0.2.1-dev" }
log.workspace = true
thiserror.workspace = true
opencl3 = { version = "0.9", optional = true }

[dev-dependencies]
env_logger = "0.11.8"

[features]
default = []
oneapi = ["dep:opencl3"]
