[package]
name = "bitnet-prompt-templates"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Prompt formatting templates for BitNet LLM inference (instruct, chat, raw)"
categories.workspace = true
keywords.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bitnet-tokenizers = { path = "../bitnet-tokenizers", version = "0.2.0-alpha.1" }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
tracing-test.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
